# Arduino-sunxi

./: CMakeLists.txt  README.md
cores/arduino/: HardwareSerial.cpp  HardwareSerial.h  WInterrupts.cpp  WSerial.h  board.c  board.h  pins_arduino_analog.h
cores/arduino/sunxi/: PeripheralPins.h  PinAF_sunxi.h  PinNames.h  analog.cpp  analog.h  clock.c  clock.h  digital_io.h  interrupt.h  pinconfig.h  sunxi_def.c  sunxi_def.h  timer.h  uart.c  uart.h
libraries/SPI/src/utility/: spi_com.c  spi_com.h
libraries/Wire/src/utility/: twi.c  twi.h
variants/V851/TinyVision/: CMakeLists.txt  PeripheralPins.c  variant_TinyVision.h
